@@ -1,3 +1,8 @@
+2001-11-08  Harri Porten  <porten@kde.org>
+
+	* pppdata.cpp: fixed renaming of default account. Bug reported
+	  by william.stephenson at ncl.ac.uk.
+
 2001-05-21  Harri Porten  <porten@kde.org>
 
 	* modem.cpp: 460800 speed fix from msade@cs.pitt.edu
